added basic layout and styling

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -7,6 +7,9 @@ h1, h2, h3 {
 }
 
 .wrapper {
-  background-color: $sunny;
   min-height: 100vh;
+}
+
+.sunny {
+  background: linear-gradient($sunny-start, $sunny-end);
 }
