--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,12 +13,14 @@
   </head>
 
   <body>
-    <div class="wrapper">
+  <div class="wrapper sunny">
       <%= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
 
+    <div class="container">
       <%= yield %>
     </div>
+  </div>
 
   </body>
 </html>
