--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -3,11 +3,12 @@
 // For example:
 $red: #FD1015;
 $blue: #167FFB;
-$yellow: #FFC65A;
+$yellow: #FFE300;
 $orange: #E67E22;
 $green: #1EDD88;
 $gray: #0E0000;
 $light-gray: #F4F4F4;
 $rainy-day: #5463FF;
 $cloudy: #ECECEC;
-$sunny: #FFC300;
+$sunny-start: #ECB425;
+$sunny-end: #EF7200;
