--- a/app/javascript/components/app/App.scss
+++ b/app/javascript/components/app/App.scss
@@ -48,24 +48,6 @@ $sunny-end: #EF7200;
   }
 }
 
-
-.hourly {
-  color: white;
-  text-align: center;
-  background-color: rgba(255, 255, 255, 0.2);
-  padding: 1rem 1rem;
-  border-radius: 1rem;
-  &-time {
-    font-size: 1rem;
-    margin-bottom: 0.4rem;
-    color:rgba(255, 255, 255, 0.6);
-  }
-  &-degrees {
-    font-size: 1rem;
-    font-weight: 400;
-  }
-}
-
 .weather {
   &-current {
     display: flex;
@@ -83,6 +65,7 @@ $sunny-end: #EF7200;
     border-bottom: 1px solid rgba(255, 255, 255, 0.6);
     display: flex;
     padding: 0.5rem 0.5rem;
+    position: relative;
   }
 }
 @keyframes blink {
