--- a/app/javascript/components/hourly/Hourly.scss
+++ b/app/javascript/components/hourly/Hourly.scss
@@ -1,6 +1,34 @@
-.weather-hourly {
-  display: flex;
-}
-
 .hourly {
+  color: white;
+  text-align: center;
+  background-color: rgba(255, 255, 255, 0.2);
+  padding: 1rem 1rem;
+  border-radius: 1rem;
+  &-time {
+    font-size: 1rem;
+    margin-bottom: 0.4rem;
+    color:rgba(255, 255, 255, 0.6);
+  }
+  &-degrees {
+    font-size: 1rem;
+    font-weight: 400;
+  }
+  .swiper-slide {
+    width: 40px;
+  }
+}
+.swiper-nav {
+  transform: scale(0.7);
+  color: white;
+  &:hover {
+    transform: scale(1);
+  }
+}
+.swiper-button {
+  &-next {
+    right: -1rem !important;
+  }
+  &-prev {
+    left: -1rem !important;
+  }
 }
