overall style updates; added user to app state via ajax call to home

--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -10,5 +10,9 @@ $gray: #0E0000;
 $light-gray: #F4F4F4;
 $rainy-day: #5463FF;
 $cloudy: #ECECEC;
-$sunny-start: #ECB425;
-$sunny-end: #EF7200;
+
+$clear-start: #ECB425;
+$clear-end: #EF7200;
+
+$cloud-start: rgb(180, 180, 180);
+$cloud-end: rgb(120, 120, 120);
