--- a/app/javascript/components/app/App.scss
+++ b/app/javascript/components/app/App.scss
@@ -14,6 +14,7 @@ $sunny-end: #EF7200;
 .city {
   font-size: 2rem;
   color: white;
+  margin-top: 1rem;
 }
 .date {
   font-size: 1rem;
@@ -23,7 +24,7 @@ $sunny-end: #EF7200;
 .daily {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  padding: 0.5rem;
+  align-items: center;
   color: white;
   &-day {
     font-size: 1rem;
@@ -31,13 +32,13 @@ $sunny-end: #EF7200;
     flex-grow: 1;
   }
   &-weather {
-    font-size: 1rem;
-    color:rgba(255, 255, 255, 0.6);
+    width: 2.2rem;
   }
   &-degrees {
     display: flex;
     font-size: 1rem;
     justify-self: flex-end;
+    align-items: center;
   }
   &-degrees-low {
     font-size: 1rem;
@@ -57,7 +58,6 @@ $sunny-end: #EF7200;
   }
   &-icon {
     font-size: 6rem;
-    color: $yellow;
     animation: blink 2s linear infinite
   }
   &-hourly {
@@ -67,6 +67,11 @@ $sunny-end: #EF7200;
     display: flex;
     padding: 0.5rem 0.5rem;
     position: relative;
+  }
+  &-forecast {
+    background-color: rgba(255, 255, 255, 0.1);
+    padding: 0 0.5rem;
+    border-radius: 1rem;
   }
 }
 @keyframes blink {
