--- a/app/javascript/components/form/Form.scss
+++ b/app/javascript/components/form/Form.scss
@@ -1,6 +1,6 @@
 .form {
   display: flex;
-  margin: 0.5rem 0 1.5rem 0;
+  margin-top: 0.5rem;
   ::placeholder {
     color: white;
   }
@@ -19,5 +19,13 @@
     background-color: transparent;
     color: white;
     border: none;
+  }
+  &-results {
+    background: linear-gradient(to right, rgba(255, 255, 255, 0.2), rgba(255, 255, 255, 0));
+    border-bottom-left-radius: 0.5rem;
+    border-bottom-right-radius: 0.5rem;
+    li {
+      padding: 0.5rem;
+    }
   }
 }
