--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   </head>
 
   <body>
-  <div class="wrapper sunny">
+  <div class="wrapper">
       <%= render 'shared/navbar' %>
       <%= render 'shared/flashes' %>
 
