--- a/app/javascript/components/hourly/Hourly.scss
+++ b/app/javascript/components/hourly/Hourly.scss
@@ -20,8 +20,10 @@
 .swiper-nav {
   transform: scale(0.7);
   color: white;
+  transition: transform 0.3s ease-out;
   &:hover {
-    transform: scale(1);
+    transform: scale(0.9);
+    transition: transform 0.3s ease-out;
   }
 }
 .swiper-button {
