--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,6 +10,9 @@
 
   <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
     <ul class="navbar-nav">
+        <li class="nav-item pr-3">
+            <%= link_to "Home", root_path, class: "text-black-50" %>
+        </li>
       <% if user_signed_in? %>
         <li class="nav-item pr-3">
             <%= link_to "Favorites", favorites_path, class: "text-black-50" %>
